# ovitor.github.io

./: Makefile  archives.html  authors.html  categories.html  index.html  pelicanconf.py  publishconf.py  pyproject.toml  tags.html
author/: vitor-carvalho.html
category/: development.html  system-administration.html
content/posts/2016/11/: creating-a-blog-with-pelican-and-github-io-pages.md
content/posts/2019/11/: preventing-screen-timeout-on-i3wm.md  terraform-101.md
content/posts/2020/05/: first-pods-and-deployments.md  k8s-with-kind.md
drafts/: first-pods-deployments-and-services.html  preventing-screen-times-out-in-i3-wm.html
feeds/: all.atom.xml  development.atom.xml  system-administration.atom.xml
posts/2016/11/creating-a-blog-with-pelican-and-github-io-pages/: index.html
posts/2020/05/kubernetes-with-kind/: index.html
tag/: blog.html  docker.html  github.html  kubernetes.html  pelican.html  python.html
theme/css/: simple.css
themes/simple/static/css/: simple.css
themes/simple/templates/: article.html  author.html  base.html  index.html  pagination.html  tag.html
