[tool.poetry]
name = "vcml10.github.io"
version = "0.1.0"
description = "Simple personal blog"
authors = ["Vitor Carvalho <vitorcarvalhoml@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pelican = "^4.2"
markdown = "^3.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
