[tool.poetry]
name = "ovitor.github.io"
version = "0.1.0"
description = "Simple personal blog"
authors = ["Vitor Carvalho <vcml@pm.me>"]

[tool.poetry.dependencies]
python = "^3.7"
pelican = "^4.2"
markdown = "^3.1"
pylint = "^2.4.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
